# iic-1602-lib

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
CMSIS/Inc/: stm32f4xx.h
Inc/: hardware.h  interface.h  main.h
Src/: hardware.c  interface.c  main.c
